--- a/Public/static/bootstrap/css/style.css
+++ b/Public/static/bootstrap/css/style.css
@@ -16,7 +16,7 @@
   bottom: 50px;
 }
 body {
-  background-image: url('../images/htmlbg.png')
+  background-image: url('../images/all_bg.jpg?__stamp__')
 }
 
 .files {
