--- a/App/Home/View/Admin/index.html
+++ b/App/Home/View/Admin/index.html
@@ -1,68 +1,31 @@
 {extends file='Admin/layout.html'}
 {block name='content'}
-{literal}
-<div id="ct" class="clrfix">
+<div id="ct" class="clrfix"
+     ms-controller="admin">
     <div class="well">
         <ul class="nav nav-list">
             <li class="nav-header">Favorites</li>
-            <li ms-class="active:page=='home'" ms-click="view($event, 'home')"><a href="#"><i class="icon-home" ms-class="icon-white:page=='home'"></i> 我的电脑</a></li>
+            <li 
+                ms-repeat-item="menu"
+                ms-class="active:item[1]==view" 
+                ms-click="viewTo($event, item[1])"><a href="#"><i class="icon-home" 
+                    ms-class="icon-white:view==item[1]"></i> 
+                %-item[0]-%管理
+            </a></li>
         </ul>
     </div>
 
     <div id="view">
         <div class="xrow">
-            <ul id="addressbar" class="breadcrumb" ms-each-item="paths">
-                <li ms-if="!$last" ms-data-path="item.path">
-                    <a href="#">{{item.name}}</a><span class="divider">/</span>
-                </li>
-                <li ms-if="$last" ms-data-path="item.path" class="active">
-                    <a href="#">{{item.name}}</a>
-                </li>
+            <ul id="addressbar" class="breadcrumb">
+                管理员<a href="{$editUrl|escape}">{$user.username|escape}</a>在线
             </ul>
         </div>
-        <div class="xrow" style="background: #FFF; -webkit-border-radius: 2px; margin: -5px 1px 0 -19px;    height: 100%; overflow: auto">    
-            <!--fekit cmd-->
-            <div class="btn-group" ms-visible="page=='explore'&&isFekitModules">
-                <button 
-                    ms-attr-title="item.title" 
-                    ms-data-cmd="item.cmd" 
-                    ms-click="cmd($event,item.cmd)" 
-                    ms-repeat-item="commands" class="btn">fekit {{item.text}}</button>
-                    <button title="帮助" ms-click="cmd($event, '')" class="btn">帮    助</button>
-            </div>
-            <!--file list-->
-            <ul ms-visible="page=='explore'" style="margin: 5px;" id="files">
-                <li class="file" ms-data-path="file.path" ms-repeat-file="files" ms-class="config:file.name=='fekit.config'">
-                    <div class="icon">
-                        <img src="about:blank" ms-attr-src="'icons/'+file._type+'.png'">
-                    </div>
-                    <div class="name" style="text-align:center;">{{file.name}}</div>
-                </li>
-            </ul>
-            <!--disk list-->
-            <ul ms-visible="page=='home'" style="margin: 5px;" id="diskes">
-                <li class="file" ms-data-path="disk" ms-repeat-disk="diskes" ms-dblclick="navigate($event)">
-                    <div class="icon">
-                        <img src="about:blank" ms-attr-src="'icons/disk.png'">
-                    </div>
-                    <div class="name" style="text-align:center;">{{disk}}</div>
-                </li>
-            </ul>
-            <!--json edit menu-->
-            <div class="btn-group" ms-visible="page=='edit'">
-                <button class="btn btn-warning" 
-                    ms-class="disabled:saving" 
-                    ms-click="save($event)">save change</button>
-                <button class="btn btn-warning" 
-                    ms-class="disabled:saving" 
-                    ms-click="save($event, 'exitAfterSave')">save & exit</button>
-                <button class="btn btn-warning" 
-                    ms-class="disabled:saving" 
-                    ms-click="save($event, 'exit')">abort changes</button>
-            </div>
-            <div ms-visible="page=='edit'" id="jsoneditor"></div>
+        <div class="xrow admin-row"> 
         </div>
     </div>
 </div>
-{/literal}
+{/block}
+{block name="script"}
+    window.MenuData = {$menu};
 {/block}
