--- a/App/Home/View/Admin/layout.html
+++ b/App/Home/View/Admin/layout.html
@@ -26,7 +26,12 @@
 	avalon.config({
 		loader: false,
 		interpolate: ["%-","-%"]
-	})
+	});
+	window.dict = {
+		"add": "添加",
+		"change": "修改",
+		"delete": "删除"
+	};
 {/literal}
 </script>
 {block name="foot"}{/block}
